# dpts

./: .gitignore  .lfsconfig  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs  record.rs
core/: Cargo.toml
core/src/: label.rs  lib.rs  record.rs
core/src/data/: achievement.rs  id.rs  mod.rs
dpts-cli/: Cargo.toml
dpts-cli/src/: error.rs  init.rs  main.rs  record.rs  user.rs
dpts-client/: Cargo.toml
dpts-client/src/: auth.rs  lib.rs
dpts-client/src/config/: mod.rs
dpts-client/src/config/storage/: remote.rs
dpts-config/: Cargo.toml
dpts-config/src/: client.rs  database.rs  error.rs  lib.rs  server.rs
dpts-config/src/client/: storage.rs
dpts-config/src/client/storage/: local.rs  remote.rs
dpts-core/: Cargo.toml
dpts-core/src/: csv.rs  database_connection.rs  error.rs  lib.rs
dpts-core/src/config/: global.rs  mod.rs
dpts-core/src/csv/: mod.rs  reader.rs  record.rs  table.rs  writer.rs
dpts-core/src/data/: record.rs
dpts-core/src/entity/: mod.rs  record_detail.rs  record_header.rs  user.rs
dpts-core/src/graphql/: mod.rs  mutation.rs  query.rs  user.rs
dpts-core/tests/: db.rs
dpts-csv/: Cargo.toml
dpts-csv/src/: error.rs  lib.rs  record.rs  table.rs
dpts-database/: Cargo.toml
dpts-database/src/: connection.rs  lib.rs
dpts-entity/: Cargo.toml
dpts-entity/src/: record_tag.rs
dpts-entity/tests/: db.rs
dpts-error/: Cargo.toml
dpts-error/src/: lib.rs
dpts-migration/: Cargo.toml
dpts-migration/src/: m20220101_000001_create_table.rs  main.rs
dpts-server/: Cargo.toml
dpts-server/src/: args.rs  config.rs  error.rs  graphql.rs  lib.rs  main.rs
dpts-server/src/graphql/: mod.rs  mutation.rs  query.rs
progress-pile-app/: Cargo.toml
progress-pile-app/src/: main.rs
progress-pile-app/src/plugins/: loading.rs  main_menu.rs  main_view.rs  mod.rs
progress-pile-app/src/themes/: dark.rs  light.rs  mod.rs
progress-pile-cli/: Cargo.toml
progress-pile-cli/src/: init.rs  main.rs  user.rs
progress-pile-client/: Cargo.toml
progress-pile-client/src/: lib.rs  main.rs
progress-pile-client/src/cli/: category.rs  config.rs  default.rs  login.rs  mod.rs  user.rs
progress-pile-client/src/config/: mod.rs  remote.rs
progress-pile-client/src/entity/: mod.rs  progress_category.rs  progress_entry.rs
progress-pile-client/src/global/: database.rs  mod.rs
progress-pile-core/: Cargo.toml
progress-pile-core/src/: database_connection.rs  entity.rs  error.rs  lib.rs
progress-pile-core/src/config/: database.rs  global.rs  mod.rs
progress-pile-core/src/csv/: mod.rs  record.rs
progress-pile-core/src/global/: config.rs  database.rs  mod.rs
progress-pile-core/src/graphql/: user.rs
progress-pile-gui/: Cargo.toml
progress-pile-migration/: Cargo.toml
progress-pile-migration-client/: Cargo.toml
progress-pile-migration-client/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
progress-pile-migration-core/: Cargo.toml
progress-pile-migration-core/src/: lib.rs  m20220101_000001_create_table.rs
progress-pile-migration-server/: Cargo.toml
progress-pile-migration-server/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
progress-pile-migration/src/: lib.rs  m20220101_000001_create_table.rs
progress-pile-server/: Cargo.toml
progress-pile-server-migration/: Cargo.toml
progress-pile-server-migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
progress-pile-server/src/: args.rs  auth.rs  cli.rs  config.rs  lib.rs  main.rs
progress-pile-server/src/config/: database.rs  mod.rs
progress-pile-server/src/entity/: access_token.rs  mod.rs  progress_category.rs  progress_entry.rs  user.rs
progress-pile-server/src/global/: database.rs  mod.rs
progress-pile-server/src/graphql/: mod.rs  mutation.rs  query.rs
server/: Cargo.toml
src/: lib.rs
