[workspace]
members = ["dpts-*"]

[workspace.dependencies]
async-graphql = { version = "7.0", features = ["chrono"] }
dpts-cli.path = "dpts-cli"
dpts-client.path = "dpts-client"
dpts-core = { path = "dpts-core" }
dpts-migration = {path = "dpts-migration"}
dpts-server = { path = "dpts-server" }
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = {version = "0.10.3", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.44.2"
toml = "0.8.22"

[workspace.dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-chrono",
]
default-features = false

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fluo10/dpts"

