[workspace]
members = ["progress-pile-*"]

[workspace.dependencies]
async-graphql = { version = "7.0", features = ["chrono"] }
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = {version = "0.10.3", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
dirs = "6.0.0"
dotenv = "0.15.0"
progress-pile-cli.path = "progress-pile-cli"
progress-pile-client.path = "progress-pile-client"
progress-pile-core = { path = "progress-pile-core" }
progress-pile-migration = { path = "progress-pile-migration", default-features = false }
progress-pile-server.path = "progress-pile-server"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.44.2"
toml = "0.8.22"
uuid = { version = "1.16.0", features = [ "serde", "v4" ] }

[workspace.dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-chrono",
    "with-uuid",
]
default-features = false

[workspace.dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fluo10/progres-pile"

