[package]
name = "dpts-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dpts-core = { path = "../dpts-core" }
anyhow = {workspace = true}
chrono = {workspace = true}
clap = {version = "4.5.37", features=["derive"]}
thiserror = {workspace = true}
