[package]
name = "dpts-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["client", "server"]
client = []
server = []
test = []

[dependencies]
chrono-tz.workspace = true
dpts-entity.workspace = true
dpts-error.workspace = true
iana-time-zone = "0.1.63"
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
