[package]
name = "dpts-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
async-graphql = "7.0"
axum = "0.8"
chrono = {workspace = true}
clap = {workspace = true}
dotenv = {workspace = true}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
]
default-features = false
