[package]
name = "dpts-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dpts-migration = { workspace = true }
anyhow = "1.0"
async-graphql = "7.0"
axum = "0.8"
chrono = {workspace = true}
clap = {workspace = true}
dotenv = {workspace = true}
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = "1.44.2"

[dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
]
default-features = false
