[package]
name = "dpts-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["clap",]
clap = ["dep:clap"]

[dependencies]
async-graphql = { version = "7.0", features = ["chrono"] }
axum = "0.8"
chrono = {workspace = true}
chrono-tz.workspace = true
clap = { workspace = true, optional = true }
dotenv = {workspace = true}
dpts-entity = { workspace = true }
dpts-migration = { workspace = true }
iana-time-zone = "0.1.63"
log = "0.4.27"
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
