[package]
name = "dpts-database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test = []

[dependencies]
dpts-entity = { workspace = true }
dpts-migration = { workspace = true }
async-graphql = {version = "7.0", features = ["chrono"]}
axum = "0.8"
chrono = {workspace = true}
dotenv = {workspace = true}
log = "0.4.27"
tokio.workspace = true

[dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-chrono",
]
default-features = false