[package]
name = "dpts-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dpts-migration = { workspace = true }
async-graphql = {version = "7.0", features = ["chrono"]}
axum = "0.8"
chrono = {workspace = true}
dotenv = {workspace = true}
log = "0.4.27"
serde = { workspace = true }
tokio = "1.44.2"

[dependencies.sea-orm]
version = "1.1"
features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-chrono",
]
default-features = false