[package]
name = "dpts-server"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dpts-core = {workspace = true}
anyhow = {workspace = true}
chrono = {workspace = true}
clap = {version = "4.5.37", features=["derive"]}
thiserror = {workspace = true}