[package]
name = "dpts-server"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dpts-core = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true, features = ["derive"]}
axum = "0.8.4"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
