[package]
name = "dpts-server"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
clap = {workspace = true, features = ["derive"]}
dpts-core = {workspace = true}
chrono = {workspace = true}
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
rand = "0.9.1"
