[package]
name = "progress-pile-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
progress-pile-client = {workspace = true}
chrono = {workspace = true}
chrono-tz.workspace = true
clap = {workspace = true, features = ["derive"]}
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true