[package]
name = "progress-pile-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["clap"]
clap = ["dep:clap"]

[dependencies]
async-graphql.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap = { workspace = true, optional = true }
dirs.workspace = true
progress-pile-core.workspace = true
progress-pile-migration = { workspace = true, features = ["client"]}
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
