[package]
name = "progress-pile-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dep:clap", "progress-pile-core/desktop", "dep:progress-pile-migration", "dep:sea-orm", "tokio/io-util", "tokio/fs"]
wasm = []

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
clap = { workspace = true, optional = true }
dirs.workspace = true
progress-pile-core.workspace = true
progress-pile-migration = { workspace = true, features = ["client"], optional = true}
sea-orm = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
