[package]
name = "progress-pile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["desktop", "server"]
cli = ["dep:clap"]
desktop = ["cli", "sqlite", "fs"]
fs = []
sqlite = ["dep:sea-orm"]
postgres = ["sea-orm/sqlx-postgres"]
server = ["cli", "sqlite", "postgres", "fs"]

[dependencies]
async-graphql.workspace = true
chrono = {workspace = true}
chrono-tz.workspace = true
clap = { workspace = true, optional = true }
csv = "1.3.1"
cynic = "3.10.0"
dotenv = {workspace = true}
iana-time-zone = "0.1.63"
log = "0.4.27"
sea-orm = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

